# OpenGL_Triangle

./: .gitignore  CMakeLists.txt  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: fragment.glsl  vertex.glsl
src/: Shader.h  main.cpp  shader.h
